@startuml Classes
    class User {
        -username: String
        -password: String
        -following: List<Followable>
        -isAdmin: boolean
        +boolean addFollowable(Followable followable)
        +boolean removeFollowable(Followable followable)
    }
    class Page {
        -moderators: List<Moderator>
        -name: String
        -image: String
        -description: String
        -creationDate: ZonedDateTime
        -archived: boolean
        +boolean addModerator(Moderator moderator)
        +boolean removeModerator(Moderator moderator)
        +Optional<Moderator> getModeratorByUser(User user)
        +int authenticateUser(User user)
        +void archive()
    }
    abstract class Followable {
        -followers: int = 0
        -active: boolean
        +void followed()
        +void unfollowed()
        +void delete()
    }
    class Profile {
        -scoreMeans: ScoreMean[5] 
    }
    abstract class Postable {
        -author: User
        -text: String
        -creationDate: ZonedDateTime
        -likes: int
        -dislikes: int
        -active: boolean
        -edited: boolean
        +void like()
        +void dislike()
        +void delete()
    }
    class Post {
        -page: Page
        -image: String
        -visibility: List~User~
        -title: String
        +boolean turnVisibleTo(User user)
        +boolean turnInvisibleTo(User user)
    }
    class Comment {
        -postable: Postable
    }
    class Modification {
        -post: Postable
        -oldImage: String
        -oldText: String
        -date: ZonedDateTime
    }
    class Score {
        -score: int
        -author: User
        -profile: Profile
        -category: String
    }
    class Moderator {
        -user: User
        -leader: boolean
    }
    class ScoreMean {
        -category: String
        -mean: float
    }
    Followable <|-- User
    Followable <|-- Page
    Followable "n" -- "n" User
    User "1" -- "n" Postable
    User "1" --o "n" Moderator
    User "1" -- "n" Score
    Moderator "n" --* "1" Page
    Page "1" *-- "n" Post
    Postable "1" *-- "n" Modification
    Postable "1" *-- "n" Comment
    Profile "1" *-- "n" Score
    User "n" -- "n" Post
    Profile "1" o-- "5" ScoreMean
    Page <|-- Profile
    Postable <|-- Post
    Postable <|-- Comment
@enduml